--- a/index.html
+++ b/index.html
@@ -9,19 +9,46 @@
 <html lang="en">
 <head>
     <!-- TODO: Add the 'meta' tag for character encoding (UTF-8). -->
+<meta charset="UTF-8">
     
     <!-- TODO: Add the responsive 'viewport' meta tag. -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- TODO: Add a title, e.g., "Web Dev Course Homepage". -->
-
+<title>Web Dev Course Homepage</title>
     <!-- TODO: Link to your CSS framework or stylesheet. -->
+     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <!-- TODO: Create a 'header' with a main heading ('h1') like "Welcome to the Web Development Course". -->
-
+ <header>
+        <h1>Welcome to the Web Development Course</h1>
+    </header>
     <!-- TODO: Create the 'main' content area. -->
+<!-- Main Content -->
+    <main>
+        <!-- Navigation Section -->
+        <nav>
+            <h2>Site Navigation</h2>
+            <ul>
+                <!-- General -->
+                <li><a href="login.html">Login</a></li>
 
+                <!-- Admin Pages -->
+                <li><a href="admin-portal.html">Admin Portal (Manage Students)</a></li>
+                <li><a href="admin-resources.html">Admin: Manage Resources</a></li>
+                <li><a href="admin-weekly.html">Admin: Manage Weekly Breakdown</a></li>
+                <li><a href="admin-assignments.html">Admin: Manage Assignments</a></li>
+
+                <!-- Student Pages -->
+                <li><a href="student-resources.html">View Course Resources</a></li>
+                <li><a href="student-weekly.html">View Weekly Breakdown</a></li>
+                <li><a href="student-assignments.html">View Assignments</a></li>
+                <li><a href="discussion-board.html">General Discussion Board</a></li>
+            </ul>
+        </nav>
+    </main>
         <!-- TODO: Create a 'nav' element to hold the site navigation. -->
             <!-- TODO: Add a sub-heading ('h2') "Site Navigation". -->
 
