--- a/login.html
+++ b/login.html
@@ -13,18 +13,16 @@
             <header>Login</header>
             <form action="" method="post">
                 <div class="field input">
-                    <label for="username">Username</label>
-                    <input type="text" name="username" id="username" required>
+                    <input type="text" name="username" placeholder="Username" id="username" required>
                 </div>
                 <div class="field input">
-                    <label for="password">Password</label>
-                    <input type="password" name="password" id="password" required>
+                    <input type="password" name="password" placeholder="Password" id="password" required>
                 </div>
                 <div class="field">
                     <input type="submit" class="btn" name="submit" value="Log in" required>
                 </div>
                 <div class="links">
-                    Don't have account? <a href="register.html">Sign up</a>
+                    Don't have account? <a href="register.html">Register</a>
                 </div>
             </form>
         </div>
