--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
                     <input type="submit" class="btn" name="submit" value="Log in" required>
                 </div>
                 <div class="links">
-                    Don't have account? <a href="#" onclick="showForm('register-form')">Register</a>
+                   <p> Don't have account? <a href="#" onclick="showForm('register-form')">Register</a></p>
                 </div>
             </form>
         </div>
@@ -48,7 +48,7 @@
                     <input type="submit" class="btn" name="submit" value="Register" required>
                 </div>
                 <div class="links">
-                    Already have an account? <a href="#" onclick="showForm('login-form')">Login</a>
+                   <p> Already have an account? <a href="#" onclick="showForm('login-form')">Login</a> </p>
                 </div>
             </form>
         </div>
