designing admin dashboard

--- a/admin.html
+++ b/admin.html
@@ -3,26 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Dashboard</title>
-
-    <!-- Your Custom CSS -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="admin.css">
+    <title>Admin Portal</title>
 </head>
 <body>
-
-<header class="navbar">
-    <h1 class="logo">Admin portal</h1>
-    <ul>
+    <div class="hero">
+        <nav class="nav">
+            <ul>
                 <li><a href="#">Manage Resources</a></li>
-                <li><a href="#" >Manage Weekly Breakdown</a></li>
-                <li><a href="#" >Manage Assignments</a></li>
-    </ul>
-</header>
-<section class="hero">
-    <h1>welcome to Admin portal</h1>
-    <p>Where you can manage your students, resources, weekly breakdowns, and assignments</p>
-</section>
-<a href="#" class="btn">Get Started</a>
-
+                <li><a href="#">Manage Weekly Breakdown</a></li>
+                <li><a href="#">Manage Assignments</a></li>
+            </ul>
+            <div>
+                <button>Update Password</button>
+                <button>Logout</button>
+            </div>
+        </nav>
+        <div class='content'>
+            <h2>Welcome to your <br> Admin Dashboard!</h2>
+            <p>Here you can manage students and all course activities</p>
+        </div>
+     
+    </div>
 </body>
 </html>
+
+    
