--- a/login.html
+++ b/login.html
@@ -11,49 +11,21 @@
 <body>
     <div class="container">
         <div class="box form-box active" id="login-form">
-            <header>Login</header>
+            <header>Secure Login</header>
             <form action="" method="post">
                 <div class="field input">
+                    <label for="username">Username</label>
                     <input type="text" name="username" placeholder="Username" id="username" required>
                 </div>
                 <div class="field input">
-                    <input type="password" name="password" placeholder="Password" id="password" required>
+                    <label for="username">Password</label>
+                    <input type="password" name="password" placeholder="Password" id="password" minlength="8" required>
                 </div>
                 <div class="field">
                     <input type="submit" class="btn" name="submit" value="Log in" required>
                 </div>
-                <div class="links">
-                   <p> Don't have account? <a href="#" onclick="showForm('register-form')">Register</a></p>
-                </div>
             </form>
         </div>
 
-        <div class="box form-box" id="register-form">
-            <header>Register</header>
-            <form action="" method="post">
-                <div class="field input">
-                    <input type="text" name="username" placeholder="Username" id="username" required>
-                </div>
-                <div class="field input">
-                    <input type="email" name="email" placeholder="email" id="email" required>
-                </div>
-                <div class="field input">
-                    <input type="password" name="password" placeholder="Password" id="password" required>
-                </div>
-                <select name="role" required>
-                    <option value="">--Select Role--</option>
-                    <option value="user">User</option>
-                    <option value="admin">Admin</option>
-                </select>
-                <div class="field">
-                    <input type="submit" class="btn" name="submit" value="Register" required>
-                </div>
-                <div class="links">
-                   <p> Already have an account? <a href="#" onclick="showForm('login-form')">Login</a> </p>
-                </div>
-            </form>
-        </div>
-    </div>
-    <script src="script.js"></script>
 </body>
 </html>
