CRUD Operation has been added

--- a/CRUD.html
+++ b/CRUD.html
@@ -20,7 +20,8 @@
           <a class="nav-link active" aria-current="page" href="CRUD.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Add New</a>
+            <section class="" id="New"></section>
+          <a class="nav-link" href="create.html">Add New</a>
         </li>
       </ul>
     </div>
