--- a/admin.html
+++ b/admin.html
@@ -11,7 +11,7 @@
     <div class="hero">
         <nav class="nav">
             <ul>
-                <li><a href="#">Manage Resources</a></li>
+                <li><a href="CRUD.html">Manage Resources</a></li>
                 <li><a href="#">Manage Weekly Breakdown</a></li>
                 <li><a href="#">Manage Assignments</a></li>
             </ul>
