--- a/CRUD.html
+++ b/CRUD.html
@@ -11,7 +11,7 @@
     <title>CRUD OPERATION</title>
   </head>
   <body>
-   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+   <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #9104ad;">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">New Student Information</a>
     <div class="collapse navbar-collapse" id="navbarNav">
