--- a/student.html
+++ b/student.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="student.css">
-    <title>Admin Portal</title>
+    <title>Student Portal</title>
 </head>
 <body>
     <div class="hero">
