adding update password portal

--- a/CRUD.html
+++ b/CRUD.html
@@ -19,6 +19,7 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="admin.html">Home</a>
         </li>
+        <button type="button" class="btn btn-primary btn-lg">Large button</button>
         <li class="nav-item">
             <section class="" id="New"></section>
           <a class="nav-link" href="create.html">Add New</a>
