enhancing the admin portal by adding animation

--- a/admin.html
+++ b/admin.html
@@ -11,20 +11,23 @@
     <div class="hero">
         <nav class="nav">
             <ul>
-                <li><a href="CRUD.html">Manage Users</a></li>
+                <li><a href="CRUD.html" style="--i:1;" >Manage Users</a></li>
                 <li><a href="#">Manage Resources</a></li>
                 <li><a href="#">Manage Weekly Breakdown</a></li>
                 <li><a href="#">Manage Assignments</a></li>
             </ul>
             <div>
-                <button>Update Password</button>
+                <button onclick="window.location.href='update_password.html'">Update Password</button>
                 <button>Logout</button>
             </div>
         </nav>
-        <div class='content'>
-            <h2>Welcome to your <br> Admin Dashboard!</h2>
+        <section class="home">
+        <div class='home-content'>
+            <h2>Welcome to your Admin Dashboard!</h2>
             <p>Here you can manage students and all course activities</p>
         </div>
+        </section>
+
      
     </div>
 </body>
