--- a/update_password.html
+++ b/update_password.html
@@ -17,10 +17,10 @@
                     <label for="username">Admin ID</label>
                     <input type="text" name="id" placeholder="ID" id="id" required>
                 </div>
-                <div class="field input">
-                    <label for="username">Current Password</label>
-                    <input type="password" name="current-password" placeholder="Current-Password" id="current-password" required>
-                </div>
+               <div class="field input">
+                  <label for="current-password">Current Password</label>     
+                  <input type="password" name="current-password" placeholder="Current-Password" id="current-password" required>
+             </div>
                 <div class="field input">
                     <label for="username">New Password</label>
                     <input type="password" name="new-password" placeholder="New-Password" id="new-password" minlength="8" required>
