--- a/student.html
+++ b/student.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="student.css">
+    <link rel="stylesheet" href="admin.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
     <title>Student Portal</title>
 </head>
 <body>
-    <div class="hero">
+    <div class="null">
         <nav class="nav">
             <ul>
                 <li><a href="student-resources.html">View Course Resources</a></li>
@@ -16,16 +17,45 @@
                 <li><a href="student-assignments.html">View Assignments</a></li>
                 <li><a href="discussion-board.html">General Discussion Board</a></li>
             </ul>
+            <div class="toggle_btn">
+                <i class="fa-solid fa-bars"></i>
+                </div>
             <div>
-                <button>Update Password</button>
+                <button onclick="window.location.href='update_password.html'">Update Password</button>
                 <button>Logout</button>
             </div>
         </nav>
-        <div class='content'>
-            <h2>Welcome to the Web <br> Development Course</h2>
-            <p></p>
+        <section class="home">
+        <div class='home-content'>
+            <h2>Welcome to your Student Dashboard!</h2>
+            <p>Here you can access all your academic resources, including course materials,
+                 weekly breakdowns,<br> assignments, and discussion boards. Stay organized and 
+                 keep track of your learning progress.</p>
         </div>
-     
+        </section>
+
+        <div class="dropdown_menu">
+               <li><a href="student-resources.html">View Course Resources</a></li>
+                <li><a href="student-weekly.html">View Weekly Breakdown</a></li>
+                <li><a href="student-assignments.html">View Assignments</a></li>
+                <li><a href="discussion-board.html">General Discussion Board</a></li>
+        </div>
+       </div>
     </div>
+    <script>const toggleBtn = document.querySelector('.toggle_btn')
+    const toggleBtnIcon = document.querySelector('.toggle_btn i')
+  const dropDownMenu = document.querySelector('.dropdown_menu')
+  toggleBtn.onclick = function(){
+    dropDownMenu.classList.toggle('open')
+    const isOpen = dropDownMenu.classList.contains('open')
+
+    toggleBtnIcon.classList = isOpen
+    ? 'fa-solid fa-xmark'
+    : 'fa-solid fa-bars'
+  }
+  </script>
+
 </body>
 </html>
+
+    
