adding new changes to admin and student portal

--- a/student.html
+++ b/student.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="admin.css">
+    <link rel="stylesheet" href="student.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
     <title>Student Portal</title>
 </head>
 <body>
-    
         <nav class="nav">
             <ul>
                 <li><a href="student-resources.html">View Course Resources</a></li>
@@ -41,6 +40,7 @@
                 <li><a href="discussion-board.html">General Discussion Board</a></li>
         </div>
        </div>
+    
 
     <script>const toggleBtn = document.querySelector('.toggle_btn')
     const toggleBtnIcon = document.querySelector('.toggle_btn i')
