--- a/admin.html
+++ b/admin.html
@@ -28,7 +28,9 @@
         <section class="home">
         <div class='home-content'>
             <h2>Welcome to your Admin Dashboard!</h2>
-            <p>Here you can manage students and all course activities</p>
+            <p>Here you can oversee and manage all academic operations, including 
+                student records,<br> course details, assignments, and discussions.
+                 Maintain smooth coordination across all departments.</p>
         </div>
         </section>
 
