fixed few design issues in admin and student portal

--- a/CRUD.html
+++ b/CRUD.html
@@ -19,7 +19,6 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="admin.html">Home</a>
         </li>
-        <button type="button" class="btn btn-primary btn-lg">Large button</button>
         <li class="nav-item">
             <section class="" id="New"></section>
           <a class="nav-link" href="create.html">Add New</a>
@@ -30,7 +29,7 @@
 </nav>
 
 <div class="container my-4">
-<table class="table">
+<table class="table table-hover">
   <thead class="thead-dark">
     <tr>
       <th>ID</th>
