--- a/admin.html
+++ b/admin.html
@@ -29,7 +29,7 @@
         <div class='home-content'>
             <h2>Welcome to your Admin Dashboard!</h2>
             <p>Here you can oversee and manage all academic operations, including 
-                student records,<br> course details, assignments, and discussions.
+                student records, course details, assignments, and discussions.
                  Maintain smooth coordination across all departments.</p>
         </div>
         </section>
