--- a/student.html
+++ b/student.html
@@ -28,7 +28,7 @@
         <div class='home-content'>
             <h2>Welcome to your Student Dashboard!</h2>
             <p>Here you can access all your academic resources, including course materials,
-                 weekly breakdowns,<br> assignments, and discussion boards. Stay organized and 
+                 weekly breakdowns, assignments, and discussion boards. Stay organized and 
                  keep track of your learning progress.</p>
         </div>
         </section>
