--- a/CRUD.html
+++ b/CRUD.html
@@ -7,52 +7,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
     <title>CRUD OPERATION</title>
   </head>
   <body>
-   <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #9104ad;">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">New Student Information</a>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="admin.html">Home</a>
-        </li>
-        <li class="nav-item">
-            <section class="" id="New"></section>
-          <a class="nav-link" href="create.html">Add New</a>
-        </li>
-      </ul>
-    </div>
-  </div>
+ <nav class="navbar navbar-light justify-content-center fs-3 mb-5" style="background-color: #9104ad; color: white; font-weight: bold;">
+  Registered Student Information
 </nav>
-
-<div class="container my-4">
-<table class="table table-hover">
-  <thead class="thead-dark">
-    <tr>
-      <th>ID</th>
-      <th>Name</th>
-      <th>Email</th>
-      <th>Password</th>
-      <th>Joining Date</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th>1</th>
-      <td>mark</td>
-      <td>@mdo</td>
-      <td>@mdo</td>
-      <td>@mdo</td>
-      <td><button type="button" class="btn btn-success">Edit</button>
-<button type="button" class="btn btn-danger">Delete</button></td>
-    </tr>
-  </tbody>
-</table>
+   <div class="container my-3">
+  <a href="admin.html" class="btn btn-dark me-2" style="background-color: #9104ad;">Home</a>
+  <a href="create.html" class="btn btn-dark" style="background-color: #9104ad;">Add New</a>
 </div>
+<style>
+  body {
+  height: auto;
+  min-height: 100vh;
+  background: linear-gradient(to bottom ,white 80%,purple) no-repeat; 
+}
+</style>
+
+    <div class="container my-4">
+  <table class="table table-hover text-center">
+    <thead style="background-color: #9104ad; color: white;">
+      <tr>
+        <th>ID</th>
+        <th>Name</th>
+        <th>Email</th>
+        <th>Password</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        
+        <th>1</th>
+        <td>Mark</td>
+        <td>mark12@gmail.com</td>
+        <td>MARK123</td>
+        <td>
+          <a href="#" class="link-dark"><i class="fa-solid fa-pen-to-square fs-5 me-3"></i></a>
+          <a href="#" class="link-dark"><i class="fa-solid fa-trash fs-5"></i></a>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
+
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
