--- a/src/resources/list.html
+++ b/src/resources/list.html
@@ -8,8 +8,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- TODO: Add meta tags for charset and viewport. -->
-    
+
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Course Resources</title>
     <!-- TODO: Add a title, e.g., "Course Resources". -->
 
     <!-- TODO: Link to your CSS framework or stylesheet. -->
