Refactor admin.html to improve meta tags and link formatting

--- a/src/weekly/admin.html
+++ b/src/weekly/admin.html
@@ -8,13 +8,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- TODO: Add the 'meta' tag for character encoding (UTF-8). -->
-    
-    <!-- TODO: Add the responsive 'viewport' meta tag. -->
-
-    <!-- TODO: Add a title, e.g., "Manage Weekly Breakdown". -->
-
-    <!-- TODO: Link to your CSS framework or stylesheet. -->
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1">
+     <title>Manage Weekly Breakdown</title>
+     <link rel="stylesheet" href="../../admin.css">
 </head>
 <body>
 
