Update admin view comments and adjust CSS for table section

--- a/src/weekly/admin.html
+++ b/src/weekly/admin.html
@@ -1,5 +1,6 @@
 <!--
-  Requirement: Create the Admin View for the Weekly Breakdown
+  Student Name: Yasser Jassim Ahmed
+  Student ID: 20197126
 
   Instructions:
   Fill in the HTML elements as described in the comments.
