Update admin.css and details.html for improved styling and structure; enhance list.html with semantic elements and content

--- a/src/weekly/details.html
+++ b/src/weekly/details.html
@@ -21,7 +21,7 @@
     <main>
          <section >
             <article>
-                <p>Starts on: 2024-01-15</p>
+                <p class="date">Starts on: 2024-01-15</p>
                 <h2 >Description & Notes</h2>
                 <div id="discription-section"><p >This week introduces the fundamentals of HTML, including its structure, common tags, and best practices for creating web pages. Students will learn how to create headings, paragraphs, links, images, and lists. By the end of the week, students should be able to build a simple static webpage using HTML.</p></div>
                 <h2>Exercises & Resources</h2>
