--- a/src/weekly/list.html
+++ b/src/weekly/list.html
@@ -8,37 +8,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- TODO: Add meta tags for charset and viewport. -->
-    
-    <!-- TODO: Add a title, e.g., "Weekly Course Breakdown". -->
-
-    <!-- TODO: Link to your CSS framework or stylesheet. -->
+    <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1">
+     <title>List</title>
+     <link rel="stylesheet" href="admin.css">
 </head>
 <body>
-
-    <!-- TODO: Create a 'header' with a main heading ('h1') "Weekly Course Breakdown". -->
-
-    <!-- TODO: Create the 'main' content area. -->
-        <!-- TODO: Create a 'section' to contain the list of weeks. -->
-            <!-- TODO: Add 2-3 dummy weekly entries using the structure below. -->
-
-            <!-- Example Week 1: -->
-            <!-- TODO: Use an 'article' element for each week to group its content semantically. -->
-                <!-- TODO: Add a heading ('h2') for the week's title (e.g., "Week 1: Introduction to HTML"). -->
-                <!-- TODO: Add a paragraph ('p') to display the start date, e.g., "Starts on: YYYY-MM-DD". -->
-                <!-- TODO: Add a paragraph ('p') for a brief description of the week. -->
-                <!-- TODO: Add an anchor tag ('a') that links to the detail page. 
-                     - For now, the 'href' can be "week-detail.html".
-                     - The link text should be "View Details & Discussion". -->
-            <!-- End of article. -->
-
-            <!-- Example Week 2: -->
-            <!-- TODO: Create a second 'article' for another week. -->
-                <!-- TODO: Add a heading, a paragraph for the start date, a paragraph for the description, and an anchor tag linking to "week-detail.html". -->
-            <!-- End of article. -->
-
-        <!-- End of weekly list section. -->
-    <!-- End of main. -->
+    <header>
+        <h1>Weekly Course Breakdown</h1>
+    </header>
+    <main>
+        <section id="weekly-list">
+             <article>
+                <h2>Week 1: Introduction to HTML</h2>
+                <p class="date">Starts on: 2024-01-15</p>
+                <p>This week introduces the fundamentals of HTML, including its structure, common tags, and best practices for creating web pages.</p>
+                <a href="week-detail.html">View Details & Discussion</a>
+             </article>
+             <article>
+                <h2>Week 2: CSS Fundamentals</h2>
+                <p class="date">Starts on: 2024-01-22</p>
+                <p>his week focuses on styling with CSS, including selectors and properties.</p>
+                <a href="week-detail.html">View Details & Discussion</a>
+             </article>
+        </section>
+    </main>
 
 </body>
 </html>
