Some fixes and changing styles

--- a/src/resources/admin.html
+++ b/src/resources/admin.html
@@ -1,4 +1,7 @@
 <!--
+  Student Name: Ali Naser Ahmed
+  Student ID: 202009697
+  
   Requirement: Create the Admin View for Course Resources
 
   Instructions:
