--- a/src/resources/details.html
+++ b/src/resources/details.html
@@ -1,4 +1,7 @@
 <!--
+  Student Name: Ali Naser Ahmed
+  Student ID: 202009697
+  
   Requirement: Create the Dedicated Page for a Single Resource
 
   Instructions:
@@ -11,8 +14,7 @@
 
     <!-- TODO: Add a title. You can make it dynamic later, but for now, use "Resource Details". -->
     <meta charset="UTF-8" />
-    <meta name="viewport" content="wid
-    th=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Resource Details</title>
 
     <!-- TODO: Link to your CSS framework or stylesheet. -->
