--- a/src/resources/list.html
+++ b/src/resources/list.html
@@ -1,4 +1,7 @@
 <!--
+  Student Name: Ali Naser Ahmed
+  Student ID: 202009697
+  
   Requirement: Create the Student View for Course Resources
 
   Instructions:
@@ -13,7 +16,6 @@
     <title>Course Resources</title>
 
     <!-- TODO: Link to your CSS framework or stylesheet. -->
-          <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@1.*/css/pico.min.css">
 
     <link rel="stylesheet" href="resourcesList.css" />
   </head>
