editing login.js

--- a/src/auth/login.html
+++ b/src/auth/login.html
@@ -12,6 +12,7 @@
 
     <!-- Link to my CSS -->
     <link rel="stylesheet" href="login.css">
+    <script src="login.js" defer></script>
 </head>
 <body>
     <!-- Main content area -->
