editing login.html

--- a/src/auth/login.html
+++ b/src/auth/login.html
@@ -45,6 +45,7 @@
                             <button type="submit" id="login" class="btn">Log In</button>
                         </div>
                     </fieldset>
+                    <div id="message-container" class="mt-2"></div>
                 </form>
             </div>
         </section>
