implementing admin.js requirements

--- a/src/resources/admin.html
+++ b/src/resources/admin.html
@@ -83,7 +83,7 @@
     </tr>
   </thead>
 
-  <tbody>
+  <tbody id="resources-tbody">
     <tr>
       <td>Chapter 1 Notes</td>
       <td>Introduction to Internet Software Development</td>
@@ -107,5 +107,7 @@
       </section>
       <!-- End of main. -->
     </main>
+
+     <script src="admin.js" defer></script>
   </body>
 </html>
