--- a/src/resources/list.html
+++ b/src/resources/list.html
@@ -26,7 +26,7 @@
     <!-- TODO: Create the 'main' content area. -->
     <main>
       <!-- TODO: Create a 'section' to contain the list of resources. -->
-      <section>
+      <section id="resource-list-section">
         <!-- TODO: Add 2-3 dummy resources using the structure below. -->
 
         <!-- Example Resource 1: -->
@@ -63,5 +63,6 @@
       </section>
       <!-- End of main. -->
     </main>
+    <script src="list.js" defer></script>
   </body>
 </html>
