--- a/src/auth/login.html
+++ b/src/auth/login.html
@@ -19,12 +19,12 @@
     <main>
         <!-- Login section -->
         <section class="container">
-            <div class="box form-box active" id="login-form">
+            <div class="box form-box active">
                 <!-- Heading for the form -->
                 <header>Welcome Back!</header>
 
                 <!-- Login form -->
-                <form action="#" method="post">
+                <form action="#" method="post" id="login-form">
                     <fieldset>
                         <legend class="text-center mb-3">Secure Login</legend>
 
