--- a/src/admin/manage_users.html
+++ b/src/admin/manage_users.html
@@ -31,7 +31,7 @@
 <body>
 
    
-    <header class="text-center py-3 bg-light shadow-sm">
+    <header class="text-center py-3 ">
         <h1>Admin Portal</h1>
     </header>
 
@@ -114,7 +114,7 @@
                 <div class="d-flex justify-content-between align-items-center mb-3">
                     <h3>Registered Students</h3>
                  
-                    <input type="text" id="search-input" class="form-control w-25" placeholder="Search by name...">
+                    <input type="text" id="search-input" class="form-control w-25" placeholder="Search">
                 </div>
 
                 <div class="table-responsive">
