--- a/src/admin/manage_users.html
+++ b/src/admin/manage_users.html
@@ -134,6 +134,32 @@
                 </div>
             </div>
         </section>
+      
+<div id="editModal" class="edit-modal-overlay">
+  <div class="edit-modal box">
+    <h3 class="text-center mb-3">Edit Student</h3>
+
+    <form id="edit-student-form">
+      <div class="field input mb-3">
+        <label for="edit-name">Full Name</label>
+        <input type="text" id="edit-name" class="form-control" required>
+      </div>
+
+      <div class="field input mb-3">
+        <label for="edit-email">Email</label>
+        <input type="email" id="edit-email" class="form-control" required>
+      </div>
+
+      <input type="hidden" id="edit-id">
+
+      <div class="d-flex justify-content-between">
+        <button type="button" id="edit-cancel" class="btn btn-secondary">Cancel</button>
+        <button type="submit" class="btn btn-primary">Update</button>
+      </div>
+    </form>
+  </div>
+</div>
+
     </main>
 
     
