--- a/src/auth/login.html
+++ b/src/auth/login.html
@@ -24,7 +24,7 @@
                 <header>Welcome Back!</header>
 
                 <!-- Login form -->
-                <form action="#" method="post" id="login-form">
+                <form id="login-form">
                     <fieldset>
                         <legend class="text-center mb-3">Secure Login</legend>
 
