Add JavaScript functionality and improve HTML structure for weekly management

--- a/src/weekly/admin.html
+++ b/src/weekly/admin.html
@@ -12,8 +12,8 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1">
      <title>Manage Weekly Breakdown</title>
-    
      <link rel="stylesheet" href="admin.css">
+     <script src="admin.js" defer></script>
 </head>
 <body>
     <header>
@@ -51,7 +51,7 @@
                         <th>Actions</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody id="weeks-tbody">
                      <tr>
                         <td>Week 1: Intro to HTML</td>
                         <td>This week covers the basics of HTML structure and elements.</td>
