--- a/src/weekly/list.html
+++ b/src/weekly/list.html
@@ -12,13 +12,14 @@
      <meta name="viewport" content="width=device-width, initial-scale=1">
      <title>List</title>
      <link rel="stylesheet" href="admin.css">
+     <script src="list.js" defer></script>
 </head>
 <body>
     <header>
         <h1>Weekly Course Breakdown</h1>
     </header>
     <main>
-        <section id="weekly-list">
+        <section id="weekly-list" id="week-list-section">
              <article>
                 <h2>Week 1: Introduction to HTML</h2>
                 <p class="date">Starts on: 2024-01-15</p>
