updating index dashboard

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <li><a href="src/assignments/admin.html">Admin: Manage Assignments</a></li>
 
                 
-                <li><a href="src/resources/details.html">View Course Resources</a></li>
+                <li><a href="src/resources/list.html">View Course Resources</a></li>
                 <li><a href="src/weekly/details.html">View Weekly Breakdown</a></li>
                 <li><a href="src/assignments/details.html">View Assignments</a></li>
                 <li><a href="src/discussion/baord.html">General Discussion Board</a></li>
