Add meta tags and structure for assignment details

--- a/src/assignments/details.html
+++ b/src/assignments/details.html
@@ -1,65 +1,54 @@
-<!--
-  Requirement: Create the Dedicated Page for a Single Assignment
-
-  Instructions:
-  This page displays the full details for one assignment and allows for discussion.
--->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- TODO: Add meta tags for charset and viewport. -->
-    
-    <!-- TODO: Add a title, for now use "Assignment Details". -->
-
-    <!-- TODO: Link to your CSS framework or stylesheet. -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Assignment Details</title>
+    <link rel="stylesheet" href="assignments.css">
 </head>
 <body>
-    <!-- TODO: Create a 'header' with a main heading ('h1'). Use a dummy title like "Assignment 1: HTML Basics". -->
 
-    <!-- TODO: Create the 'main' content area. -->
+    <header>
+        <h1 id="assignment-title">Assignment Title</h1>
+    </header>
+
+    <main>
 
         <!-- Section 1: Assignment Information -->
-        <!-- TODO: Use an 'article' to display the main assignment information. -->
-            <!-- TODO: Add a paragraph ('p') to display the due date, e.g., "Due: YYYY-MM-DD". -->
-            <!-- TODO: Add a sub-heading ('h2') "Description". -->
-            <!-- TODO: Add a paragraph ('p') with dummy text for the assignment's detailed description. -->
+        <article>
+            <p id="assignment-due-date">Due: YYYY-MM-DD</p>
 
-            <!-- TODO: Add another sub-heading ('h2') "Attached Files & Links". -->
-            <!-- TODO: Use an unordered list ('ul') to display the links. -->
-                <!-- TODO: Add list items ('li') with anchor tags ('a') for each resource. Use dummy links for now. -->
-                <!-- Example: <li><a href="#">assignment-brief.pdf</a></li> -->
-            <!-- End of the list. -->
-        <!-- End of article. -->
+            <h2>Description</h2>
+            <p id="assignment-description">Assignment detailed description here.</p>
+
+            <h2>Attached Files & Links</h2>
+            <ul id="assignment-files-list">
+                <!-- Populated by details.js -->
+            </ul>
+        </article>
 
         <!-- Section 2: Discussion Forum -->
-        <!-- TODO: Create a 'section' for the discussion, with an 'id' of "discussion-forum". -->
-            <!-- TODO: Add a sub-heading ('h2') "Questions & Discussion". -->
+        <section id="discussion-forum">
+            <h2>Questions & Discussion</h2>
 
-            <!-- Subsection 2.1: Existing Comments -->
-            <!-- TODO: Add a container (like a 'div') for the list of comments. -->
-                <!-- TODO: Add 1-2 dummy comments to show the structure. -->
+            <!-- Existing Comments -->
+            <div id="comment-list">
+                <!-- Populated by details.js -->
+            </div>
 
-                <!-- Example Comment 1: -->
-                <!-- TODO: Use an 'article' for each comment. -->
-                    <!-- TODO: Use a 'p' for the comment text (e.g., "Is it okay to use a 'section' inside an 'article'?"). -->
-                    <!-- TODO: Use a 'footer' to show the author (e.g., "Posted by: Jane Smith"). -->
-                <!-- End of comment article. -->
+            <!-- Add a Comment Form -->
+            <form id="comment-form" action="#">
+                <fieldset>
+                    <legend>Ask a Question</legend>
+                    <label for="new-comment-text">Your Comment:</label>
+                    <textarea id="new-comment-text" required></textarea>
+                    <button type="submit">Post Comment</button>
+                </fieldset>
+            </form>
+        </section>
 
-            <!-- Subsection 2.2: Add a Comment Form -->
-            <!-- TODO: Create a 'form' for users to post new comments. Action can be '#'. -->
-                <!-- TODO: Use a 'fieldset' to group the controls. -->
-                    <!-- TODO: Add a 'legend', e.g., "Ask a Question". -->
+    </main>
 
-                    <!-- TODO: Add a 'label' and 'textarea' for the comment box.
-                         - label 'for': "new-comment"
-                         - textarea 'id': "new-comment", required -->
-                    
-                    <!-- TODO: Add a 'button' to submit the comment.
-                         - type="submit", Text: "Post Comment" -->
-                <!-- End of fieldset. -->
-            <!-- End of form. -->
-        <!-- End of discussion section. -->
-
-    <!-- End of main. -->
+    <script src="details.js" defer></script>
 </body>
 </html>
