fixing both login.html and login.js

--- a/src/auth/login.html
+++ b/src/auth/login.html
@@ -21,10 +21,10 @@
         <section class="container">
             <div class="box form-box active">
                 <!-- Heading for the form -->
-                <header>Welcome Back!</header>
+                <h1>Welcome Back!</h1>
 
                 <!-- Login form -->
-                <form id="login-form">
+                <form id="login-form" action="#" method="post">
                     <fieldset>
                         <legend class="text-center mb-3">Secure Login</legend>
 
