Refactor week details and discussion components for clarity and functionality

--- a/src/weekly/list.html
+++ b/src/weekly/list.html
@@ -19,18 +19,18 @@
         <h1>Weekly Course Breakdown</h1>
     </header>
     <main>
-        <section id="weekly-list" id="week-list-section">
+        <section  id="week-list-section">
              <article>
                 <h2>Week 1: Introduction to HTML</h2>
                 <p class="date">Starts on: 2024-01-15</p>
                 <p>This week introduces the fundamentals of HTML, including its structure, common tags, and best practices for creating web pages.</p>
-                <a href="week-detail.html">View Details & Discussion</a>
+                <a href="details.html?id=week_1">View Details & Discussion</a>
              </article>
              <article>
                 <h2>Week 2: CSS Fundamentals</h2>
                 <p class="date">Starts on: 2024-01-22</p>
                 <p>his week focuses on styling with CSS, including selectors and properties.</p>
-                <a href="week-detail.html">View Details & Discussion</a>
+                <a href="details.html?id=week_2">View Details & Discussion</a>
              </article>
         </section>
     </main>
