--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 
                 <li><a href="src/resources/list.html">View Course Resources</a></li>
                 <li><a href="src/weekly/details.html">View Weekly Breakdown</a></li>
-                <li><a href="src/assignments/details.html">View Assignments</a></li>
+                <li><a href="src/assignments/list.html">View Assignments</a></li>
                 <li><a href="src/discussion/baord.html">General Discussion Board</a></li>
             </ul>
         </nav>
